<resources>
    <string name="app_name" translatable="false">G2D</string>
    <string name="app_description">G2D provides simple and advanced ways to block access to the internet - no root required. Apps and addresses can individually be allowed or denied access to your Wi-Fi and/or mobile connection.</string>
    <string name="app_copyright" translatable="false">Copyright \u00A9 2015–2020 by M. Bokhorst (M66B)</string>
    <string name="app_android">G2D requires Android 5.1 or later</string>
    <string name="app_xposed">Xposed causes too many crashes, which might result in G2D being removed from the Google Play Store, therefore G2D isn\'t supported while Xposed is installed</string>
    <string name="app_eula" translatable="false">THIS SOFTWARE IS PROVIDED BY THE AUTHOR \'\'AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
    <string name="app_privacy"><a href="https://www.G2D.me/privacy/">Privacy policy</a></string>
    <string name="app_first">Great care has been taken to develop and test G2D, however it is impossible to guarantee G2D will work correctly on every device.</string>
    <string name="app_agree">I agree</string>
    <string name="app_disagree">I disagree</string>
    <string name="app_support">G2D needs your help. Tap to purchase pro features to keep the project going.</string>
    <string name="channel_foreground">Running services</string>
    <string name="channel_notify">General notifications</string>
    <string name="channel_access">Access notifications</string>
    <string name="menu_search">Search for app</string>
    <string name="menu_filter">Filter apps</string>
    <string name="menu_app_user">Show user apps</string>
    <string name="menu_app_system">Show system apps</string>
    <string name="menu_app_nointernet">Show apps without internet</string>
    <string name="menu_app_disabled">Show disabled apps</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_sort_name">Sort on name</string>
    <string name="menu_sort_uid">Sort on uid</string>
    <string name="menu_sort_data">Sort on data usage</string>
    <string name="menu_log">Show log</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_support">Support</string>
    <string name="menu_about">About</string>
    <string name="menu_apps">Other apps</string>
    <string name="menu_protocol_udp" translatable="false">UDP</string>
    <string name="menu_protocol_tcp" translatable="false">TCP</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_export">Export</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cleanup">Cleanup</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_dport">Source port</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination app</string>
    <string name="title_external">For an external server select \'nobody\'</string>
    <string name="setting_defaults">Defaults (white/blacklist)</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_screen_wifi">Allow Wi-Fi when screen on</string>
    <string name="setting_screen_other">Allow mobile when screen on</string>
    <string name="setting_whitelist_roaming">Block roaming</string>
    <string name="setting_options">Options</string>
    <string name="setting_theme">Theme: %1$s</string>
    <string name="setting_dark">Use dark theme</string>
    <string name="setting_install">Notify on new install</string>
    <string name="setting_screen_on">Apply \'when screen on\' rules</string>
    <string name="setting_auto">Auto enable after %1$s minutes</string>
    <string name="setting_delay">Delay screen off %1$s minutes</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_network_options">Network options</string>
    <string name="setting_subnet">Subnet routing</string>
    <string name="setting_tethering">Allow tethering</string>
    <string name="setting_lan">Allow LAN access</string>
    <string name="setting_ip6">Enable IPv6 traffic</string>
    <string name="setting_wifi_home">Wi-Fi home networks: %1$s</string>
    <string name="setting_metered">Handle metered Wi-Fi networks</string>
    <string name="setting_metered_2g">Consider 2G unmetered</string>
    <string name="setting_metered_3g">Consider 3G unmetered</string>
    <string name="setting_metered_4g">Consider LTE unmetered</string>
    <string name="setting_national_roaming">Ignore national roaming</string>
    <string name="setting_eu_roaming">Ignore EU roaming</string>
    <string name="setting_call">Disable on call</string>
    <string name="setting_lockdown_wifi">Lockdown Wi-Fi</string>
    <string name="setting_lockdown_other">Lockdown mobile</string>
    <string name="setting_reload_onconnectivity">Reload on every connectivity change</string>
    <string name="setting_advanced_options">Advanced options</string>
    <string name="setting_system">Manage system apps</string>
    <string name="setting_log_app">Log internet access</string>
    <string name="setting_access">Notify on internet access</string>
    <string name="setting_filter">Filter traffic</string>
    <string name="setting_filter_udp">Filter UDP traffic</string>
    <string name="setting_handover">Seamless VPN handover on reload</string>
    <string name="setting_clear_onreload">Close connections on reload</string>
    <string name="setting_lockdown">Lockdown traffic</string>
    <string name="setting_track_usage">Track network usage</string>
    <string name="setting_reset_usage">Reset network usage</string>
    <string name="setting_show_resolved">Show resolved domain names</string>
    <string name="setting_block_domains">Block domain names</string>
    <string name="setting_rcode">DNS response code: %s</string>
    <string name="setting_forwarding">Port forwarding</string>
    <string name="setting_vpn4">VPN IPv4: %s</string>
    <string name="setting_vpn6">VPN IPv6: %s</string>
    <string name="setting_dns">VPN DNS: %s</string>
    <string name="setting_validate">Validate at: %s</string>
    <string name="setting_ttl">Minimum DNS TTL: %s s</string>
    <string name="setting_socks5_enabled">Use SOCKS5 proxy</string>
    <string name="setting_socks5_addr">SOCKS5 address: %s</string>
    <string name="setting_socks5_port">SOCKS5 port: %s</string>
    <string name="setting_socks5_username">SOCKS5 username: %s</string>
    <string name="setting_socks5_password">SOCKS5 password: %s</string>
    <string name="setting_pcap_record_size">PCAP record size: %s B</string>
    <string name="setting_pcap_file_size">PCAP max. file size: %s MB</string>
    <string name="setting_watchdog">Watchdog: every %s minutes</string>
    <string name="setting_stats_category">Speed notification</string>
    <string name="setting_stats">Show speed notification</string>
    <string name="setting_stats_top">Show top apps</string>
    <string name="setting_stats_frequency">Sample interval: %s ms</string>
    <string name="setting_stats_samples">Number of samples: %s s</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_export">Export settings</string>
    <string name="setting_import">Import settings</string>
    <string name="setting_hosts">Import hosts file</string>
    <string name="setting_hosts_append">Import hosts file (append)</string>
    <string name="setting_hosts_url">Hosts file download URL</string>
    <string name="setting_hosts_download">Download hosts file</string>
    <string name="setting_technical">Technical information</string>
    <string name="setting_technical_general">General</string>
    <string name="setting_technical_networks">Networks</string>
    <string name="setting_technical_subscription">Subscriptions</string>
    <string name="summary_install">Show status bar notification to directly configure newly installed apps (pro feature)</string>
    <string name="summary_auto">After disabling using the widget, automatically enable G2D again after the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_delay">After turning the screen off, keep screen on rules active for the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_update">Check for new releases on GitHub twice daily</string>
    <string name="summary_tethering">Depending on the Android version, tethering may work or may not work. Tethered traffic cannot be filtered.</string>
        <string name="login">Log in</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="create_account">Create account</string>
        <string name="name">Name</string>
        <string name="assign_4_digit_pin">Assign 4-digit pin</string>
        <string name="get_someone_you_trust_to_do_this">Get someone you trust to do this.</string>
        <string name="set_uninstall_pin">Set uninstall pin</string>
        <string name="forogot_pin"> Forgot pin? Email support@g2d.com.\n We will reply with pin after a few hours to rule out misuse.</string>
        <string name="its_impossible_to_uninstall_app_once_pin_protect_is_setup">It\'s impossible to uninstall app once pin protect is setup.</string>
        <string name="complete_all_3_steps">Complete All 3 steps below.</string>
        <string name="skipping_any_step_will_cause_pin">Skipping any step will cause pin\n protect to malfunction.</string>
        <string name="step1"><b>Step 1:</b> Enable device admin</string>
        <string name="step2"><b>Step 2:</b> Enable accessibility</string>
        <string name="step3"><b>Step 3:</b> Assign 4-digit pin</string>
        <string name="go">GO</string>
        <string name="basic_settings">Basic settings</string>
        <string name="require_pin_when_uninstalling">Require pin when uninstalling.\nunsubscribing, or tampering with app functions.</string>
        <string name="app_black_list">App blacklist</string>
        <string name="lock_troublesome_apps">Lock troublesome apps. Good riddence!</string>
        <string name="pin_protect">Pin protect</string>
        <string name="domain_blacklist">Domain blacklist</string>
        <string name="block_troublesome_domain">Block troublesome domains. Good riddance!</string>
        <string name="by_signingup_for_you_agree_terms">By signing up for G2D, you agree to our</string>
        <string name="terms_of_use">terms of use.</string>
</resources>