<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_white"
        tools:context=".ui.SignUpActivity">

        <include
            android:id="@+id/app_logo"
            layout="@layout/app_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_account"
            android:textColor="@color/label_black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />


        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColor="@color/label_black"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColor="@color/label_black"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey"
            android:ems="10"
            android:fontFamily="@font/nunito"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColor="@color/label_black"
            android:textColorHint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

<!--        terms of use-->
        <LinearLayout
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/by_signingup_for_you_agree_terms"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/terms_of_use"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <Button
            android:id="@+id/create_acount_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onCreateAccount"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/label_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/terms" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:onClick="onLogin"
            android:text="@string/login"
            android:textColor="@color/label_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_acount_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
