<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_white"
        tools:context=".ui.PinProtection">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/its_impossible_to_uninstall_app_once_pin_protect_is_setup"
            app:titleTextColor="@color/label_black" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/complete_all_3_steps"
            android:textColor="@color/label_black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito"
            android:gravity="center|center_horizontal"
            android:text="@string/skipping_any_step_will_cause_pin"
            android:textColor="@color/label_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito"
            android:text="@string/step1"
            android:textColor="@color/label_black"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip" />

        <Button
            android:id="@+id/step_1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onDeviceAdmin"
            android:text="@string/go"
            android:textColor="@color/label_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/skip" />

<!--        step2-->

        <TextView
            android:id="@+id/step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito"
            android:text="@string/step2"
            android:textColor="@color/label_black"
            app:layout_constraintBottom_toBottomOf="@+id/step_2_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_1" />

        <Button
            android:id="@+id/step_2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onAccessablity"
            android:text="@string/go"
            android:textColor="@color/label_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_1" />

<!--        step 3-->
        <TextView
            android:id="@+id/step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/nunito"
            android:text="@string/step3"
            android:textColor="@color/label_black"
            app:layout_constraintBottom_toBottomOf="@+id/step_3_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_2" />

        <Button
            android:id="@+id/step_3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/nunito_bold"
            android:onClick="onCreatePin"
            android:text="@string/go"
            android:textColor="@color/label_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
